# Agora

./: .env-copy  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  DEV_PROD.md  Makefile  Modelfile.e5  NOTICE  README.md  ROADMAP.md  pyproject.toml  todo.json
.agent/: README.md
.agent/notes/: ADAPTIVE_NOTE.md  DEVELOP_NOTE.md  DEV_PROD.md  DUCKDB_SERVE.md  EMBEDDING_SPACE.md  HANDOFF_OFFICIAL_URL.md  HIERARCHY_KMOD.md  HIERARCHY_LAYERS.md  HIERARCHY_TAU.md  MISTRAL_NOTE.md  MODULES.md  PIPELINE.md  PIPELINE_LEDGER.md  REALDATA_NOTE.md  VPS.md
.agent/queue/: data.md  eval.md  iteration-feedback-distill.md  night-plan.md  stream.md  viz.md
.claude/: CLAUDE.md
.github/: .cla-smoke  CODEOWNERS
.github/workflows/: ci.yml  cla.yml  deploy.yml
backend/: .gitignore  HDBSCAN_NOTE.md  MULTIDATASET_NOTE.md  NAMING_SWITCH_NOTE.md  README.md  analysis.py  analysis_store.py  auth.py  avis.py  bake_duckdb.py  build_analysis.py  build_arguments.py  build_cache.py  build_children.py  build_demographics.py  build_manager.py  build_opinion.py  citations.py  claims_endpoint.py  cluster_enrich.py  consultation_schema.py  cost.py  density.py  develop.py  flags_store.py  insights.py  keywords_fr.py  live_cluster.py  llm_cache.py  recluster.py  recut.py  reextract_v3.py  sample_claimv2.py  sample_extract_v3.py  sandbox.py  scatter.py  seed_ameliorer_agora.py  selftest_extractive.py  serve_metrics.py  server.py  (+11 more)
backend/scripts/: __init__.py  measure_develop.py  reextract_v3.py  sample_claimv2.py  sample_extract_v3.py  seed_ameliorer_agora.py  selftest_extractive.py  test_lmstudio.py  verify_claims_cache.py
backend/tests/: __init__.py  _helpers.py  conftest.py  test_abstraction.py  test_arguments.py  test_auth.py  test_avis_duckdb.py  test_avis_invariants.py  test_avis_list.py  test_build_cache_label.py  test_demographics.py  test_density.py  test_develop_distinctive.py  test_hardening.py  test_hero_avis.py  test_insights_cache_key.py  test_integration.py  test_keywords_fr.py  test_llm_resilience.py  test_nested.py  test_opinion.py  test_public_mode.py  test_ratelimit.py  test_read_shape.py  test_recluster.py  test_recut.py  test_sandbox_api.py  test_security_whitelist.py  test_serve_metrics.py  test_submit_privacy.py  test_titles_anchored.py  test_todo.py  test_tree_integrity.py
cached_data/lutte-contre-les-fausses-informations/: claims.json  claims_emb.npz  target_emb.npz  translations.json
data/: fausses-informations_opendata-brute.csv
deploy/: deploy.sh  promote-cache.sh  serve.sh
eval/: .gitignore  README.md  coherence.py  data.py  quality_bench.py  quality_report.md  tiktok_diag_results.json  tiktok_diag_two_clusters.md  tiktok_diagnostic.md
eval/segmentation/: adaptive_report.md  adaptive_seg.py  attn_seg.py  claims_pipeline.py  claims_report.md  e5large_seg.py  gold_large.json  graph_report.md  learned_report.md  learned_scores.json  learned_seg.py  llm_scores.json  metrics.py  nli_report.md  nli_seg.py  report.md  scores.json  seg_bench.py  segmenters.py  small_models.py  small_models_scores.json
frontend/: README.md  TEST_NOTE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: graph.json
frontend/src/: App.tsx  AvisPanel.tsx  CirclePack.tsx  ClaimsControls.tsx  ClaimsThemePanel.tsx  ClaimsView.tsx  DatasetPicker.tsx  KnobsPanel.tsx  MethodPicker.tsx  NamingPicker.tsx  StatsBar.tsx  api.ts  (+7 more)
hackathon-an-2026/: COMPARATIF_GRANDDEBAT.md  DEFI.md  PLAN_EQUIPE.md
queue/: cross-lane.md  front-redesign.md  iteration-feedback-distill.md  night-plan.md  nlp.md  prod-hardening.md
research/: .gitignore  CLEANUP_NOTE.md  __init__.py  ab_embedder_fr.py  ab_embedder_note.md  ab_embedder_tiktok.md  ab_embedder_tiktok_jina.md  abstraction_note.md  abstraction_proto.py  analyze_stance_validation.py  anonymize_pii.py  api_models.json  api_quality_bench.py  apply_recut.py  argmine_extract.py  argmine_extract_note.md  argmine_extract_results.json  argmine_panel.py  argmine_panel_votes.json  argmine_verbatim.py  argmine_verbatim_note.md  argmine_verbatim_results.json  audit_auth.md  audit_capacites_2026-07.md  audit_code_2026-07.md  audit_cost.md  audit_input.md  audit_privacy.md  audit_secrets.md  bench.py  bench_duckdb_avis.py  bench_jina.md  bench_mistral.md  bench_veille.md  claimv2_note.md  cleavage_ab.py  cleavage_ab_deriv.lutte-contre-les-fausses-informations.json  cleavage_ab_note.md  cleavage_ab_panel.py  cleavage_ab_panel_votes.json  (+143 more)
scripts/: characteristics.py  characteristics_csv.py  setup.sh
(+481 files in other folders)
